# brendford-onsale-calendar

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  sync.yml
src/brentford_calendar/: __init__.py  calendar_client.py  cli.py  config.py  models.py  scraper.py
tests/: __init__.py  test_calendar_client.py  test_cli.py  test_config.py  test_models.py  test_onsale_fixture_data.py  test_processed_fixture_data.py  test_scraper.py
tests/data/: expected-fixtures-categorised.json  expected-fixtures-onsale-filtered.json  expected-fixtures.json  ticket-information.html
